<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/albumCreateImage"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:background="@color/transparente"
            android:scaleType="centerCrop" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_album_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_album_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/selecciona_el_d_a"
            android:clickable="false"
            android:focusable="false"/>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/txt_album_genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/genero"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/txt_album_disc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/disquera"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/album_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_weight=".5"
                android:text="@string/cancelar"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/album_create_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_weight=".5"
                android:text="@string/crear"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>